// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serve fs output: 00 manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "description": "test extension",
  "manifest_version": 3,
  "name": "test extension",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://github.com/*",
        "https://google.com/*",
      ],
      "resources": Array [
        "<dynamic_resource>",
      ],
      "use_dynamic_url": true,
    },
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`serve fs output: 01 output files 1`] = `
Array [
  "assets/content-script-client.js.hash.js",
  "assets/content-script-loader.content1.ts.hash.js",
  "assets/content-script-loader.content2.ts.hash.js",
  "assets/dynamic-scripts.hash.js",
  "assets/precontroller.hash.js",
  "manifest.json",
  "service-worker-loader.js",
  "src/content1.ts.js",
  "src/content2.ts.js",
  "src/font.otf",
  "src/font.otf.js",
  "src/image.png",
  "src/image.png.js",
  "src/script.ts.js",
]
`;

exports[`serve fs output: assets/content-script-loader.content1.ts.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    if (\\"\\")
      await import(
        /* @vite-ignore */
        chrome.runtime.getURL(\\"\\")
      );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.js.hash.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"src/content1.ts.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/content-script-loader.content2.ts.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    if (\\"\\")
      await import(
        /* @vite-ignore */
        chrome.runtime.getURL(\\"\\")
      );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content-script-client.js.hash.js\\")
    );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"src/content2.ts.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`serve fs output: assets/dynamic-scripts.hash.js 1`] = `
"var script = \\"/src/script.ts.js\\";

export { script as s };
"
`;

exports[`serve fs output: assets/precontroller.hash.js 1`] = `
"setTimeout(() => location.reload(), 100);
"
`;

exports[`serve fs output: service-worker-loader.js 1`] = `
"import 'http://localhost:3000/@crx/client/worker';
import 'http://localhost:3000/src/background.ts';
"
`;

exports[`serve fs output: src/content1.ts.js 1`] = `
"import { i as icon } from './image.png.js';
import { s as script } from '../assets/dynamic-scripts.hash.js';

console.log(\\"content.ts\\", { icon, script });
"
`;

exports[`serve fs output: src/content2.ts.js 1`] = `
"import { f as font } from './font.otf.js';

console.log(\\"content2.ts\\", { font });
"
`;

exports[`serve fs output: src/font.otf.js 1`] = `
"var font = \\"/src/font.otf\\";

export { font as f };
"
`;

exports[`serve fs output: src/image.png.js 1`] = `
"var icon = \\"/src/image.png\\";

export { icon as i };
"
`;

exports[`serve fs output: src/script.ts.js 1`] = `
"console.log(\\"main world script\\");
"
`;
